Better style matching Omarchy

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -23,10 +23,10 @@ ahead      = "+${count} "
 diverged   = "+-${ahead_count}/${behind_count} "
 behind     = "-${count} "
 conflicted = "x "
-up_to_date = ""
+up_to_date = "✓ "
 untracked  = "? "
 modified   = "* "
-stashed    = "$"
-staged     = "+"
-renamed    = "r"
-deleted    = "d"
+stashed    = ""
+staged     = ""
+renamed    = ""
+deleted    = ""
